test/corpus/basic-directives.txt
===========================
Basic Directive - Raw Value
===========================

font = TX-02

---

(document 
 (directive 
  (basic_directive
   (property)
   (value
    (string)))))

=====================================
Basic Directive - Numbers in Property
=====================================

x11-instance-name = ghostty

---

(document 
 (directive 
  (basic_directive
   (property)
   (value
    (string)))))

=======================
Basic Directive - Empty
=======================

font = 

---

(document
 (directive
  (basic_directive
   (property))))

================================
Basic Directive - Quoted Strings
================================

font = "TX-02"
font = 'TX-02'

---

(document 
 (directive 
  (basic_directive
   (property)
   (value
    (string))))
 (directive 
  (basic_directive
   (property)
   (value
    (string)))))

=========================
Basic Directive - Numbers
=========================

font-size = 10
font-size = 10.5
font-size = 0.5

---

(document 
 (directive 
  (basic_directive
   (property)
   (value
    (number))))
 (directive 
  (basic_directive
   (property)
   (value
    (number))))
 (directive 
  (basic_directive
   (property)
   (value
    (number)))))

=========================================
Basic Directive - Bare Percent Adjustment
=========================================

window-padding = 10%

---

(document 
 (directive 
  (basic_directive
   (property)
   (value
    (adjustment 
     (percent_adjustment))))))

===========================================
Basic Directive - Signed Percent Adjustment
===========================================

window-padding = -10%
window-padding = +10%

---

(document 
 (directive 
  (basic_directive
   (property)
   (value
    (adjustment 
     (percent_adjustment)))))
 (directive 
  (basic_directive
   (property)
   (value
    (adjustment 
     (percent_adjustment))))))

====================================
Basic Directive - Numeric Adjustment
====================================

window-padding = -10
window-padding = +10

---

(document 
 (directive 
  (basic_directive
   (property)
   (value
    (adjustment 
     (numeric_adjustment)))))
 (directive 
  (basic_directive
   (property)
   (value
    (adjustment 
     (numeric_adjustment))))))

=================================
Basic Directive - Not Adjustments
=================================

window-padding = - 10
window-padding = + 10

---

(document 
 (directive 
  (basic_directive
   (property)
   (value
    (string))))
 (directive 
  (basic_directive
   (property)
   (value
    (string)))))

============================
Basic Directive - Hex Colors
============================

background = #f0f0f0
foreground = #000000
macos-icon-ghost-color = f0f0f0
macos-icon-screen-color = ff0000

---

(document 
 (directive 
  (basic_directive
   (property)
   (value
    (color))))
 (directive 
  (basic_directive
   (property)
   (value
    (color))))
 (directive 
  (basic_directive
   (property)
   (value
    (color))))
 (directive 
  (basic_directive
   (property)
   (value
    (color)))))

=======================
Basic Directive - Tuple
=======================

window-padding-x = 10,20
window-padding-y = 1,2

---

(document
 (directive
  (basic_directive
   (property)
   (value
    (tuple
     (number)
     (number)))))
 (directive
  (basic_directive
   (property)
   (value
    (tuple
     (number)
     (number))))))

=============================
Basic Directive - Size Tuples
=============================

quick-terminal-size = 10%,10%
quick-terminal-size = 100px,50px
quick-terminal-size = 100%,800px

---

(document
 (directive
  (basic_directive
   (property)
   (value
    (tuple
     (adjustment
      (percent_adjustment))
     (adjustment
      (percent_adjustment))))))
 (directive
  (basic_directive
   (property)
   (value
    (tuple
     (adjustment
      (percent_adjustment))
     (adjustment
      (percent_adjustment))))))
 (directive
  (basic_directive
   (property)
   (value
    (tuple
     (adjustment
      (percent_adjustment))
     (adjustment
      (percent_adjustment)))))))
