test/corpus/config-file-directives.txt
============================
Config File Directive - File
============================

config-file = ~/.config/ghostty/config.d/theme

---

(document
 (directive
  (config_file_directive
   (property)
   (path_value (string)))))

==============================
Config File Directive - Quoted
==============================

config-file = "~/.config/ghostty/config.d/theme"
config-file = '~/.config/ghostty/config.d/theme'

---

(document
 (directive
  (config_file_directive
   (property)
   (path_value (string))))
 (directive
  (config_file_directive
   (property)
   (path_value (string)))))

===================================
Config File Directive - With Spaces
===================================

config-file = ~/.config/ghostty/config.d/my theme

---

(document
 (directive
  (config_file_directive
   (property)
   (path_value (string)))))

===================================
Config File Directive - Empty Value
===================================

config-file =

---

(document
 (directive
  (config_file_directive
   (property))))

=====================================
Config File Directive - Optional File
=====================================

config-file = ?~/work/ghostty/config
config-file = ?"~/work/ghostty/config"
config-file = "?oddly/named/dir/config"

---

(document
 (directive
  (config_file_directive
   (property)
   (path_value (string))))
 (directive
  (config_file_directive
   (property)
   (path_value (string))))
 (directive
  (config_file_directive
   (property)
   (path_value (string)))))
