test/corpus/palette-directives.txt
==================
Palette Directives
==================

palette = 0=#ffffff
palette = 1=#000000
palette = 0=ffffff
palette = 1=000000

---

(document 
 (directive 
  (palette_directive
   (property)
   (palette_value
    (palette_index)
    (color_value))))
 (directive 
  (palette_directive
   (property)
   (palette_value
    (palette_index)
    (color_value))))
 (directive 
  (palette_directive
   (property)
   (palette_value
    (palette_index)
    (color_value))))
 (directive 
  (palette_directive
   (property)
   (palette_value
    (palette_index)
    (color_value)))))
