test/corpus/path-directives.txt
============================
Path Directive - File
============================

config-file = ~/.config/ghostty/config.d/theme
gtk-custom-css = ~/.config/ghostty/config.d/theme
custom-shader = ~/.config/ghostty/config.d/theme
background-image = ~/.config/ghostty/config.d/ghostty.png

---

(document
 (directive
  (path_directive
   (property)
   (path_value (string))))
 (directive
  (path_directive
   (property)
   (path_value (string))))
 (directive
  (path_directive
   (property)
   (path_value (string))))
 (directive
  (path_directive
   (property)
   (path_value (string)))))

==============================
Path Directive - Quoted
==============================

config-file = "~/.config/ghostty/config.d/theme"
custom-shader = '~/.config/ghostty/config.d/shader.glsl'
background-image = "~/.config/ghostty/config.d/ghostty.png"

---

(document
 (directive
  (path_directive
   (property)
   (path_value (string))))
 (directive
  (path_directive
   (property)
   (path_value (string))))
 (directive
  (path_directive
   (property)
   (path_value (string)))))

===================================
Path Directive - With Spaces
===================================

config-file = ~/.config/ghostty/config.d/my theme
custom-shader = ~/.config/ghostty/config.d/my shader.glsl
background-image = ~/.config/ghostty/config.d/my ghostty bg.png

---

(document
 (directive
  (path_directive
   (property)
   (path_value (string))))
 (directive
  (path_directive
   (property)
   (path_value (string))))
 (directive
  (path_directive
   (property)
   (path_value (string)))))

===================================
Path Directive - Empty Value
===================================

config-file =

---

(document
 (directive
  (path_directive
   (property))))

=====================================
Path Directive - Optional File
=====================================

config-file = ?~/work/ghostty/config
gtk-custom-css = ?"~/work/ghostty/style.css"
custom-shader = "?oddly/named/dir/config"
background-image = "?oddly/named/dir/bg.png"

---

(document
 (directive
  (path_directive
   (property)
   (path_value (string))))
 (directive
  (path_directive
   (property)
   (path_value (string))))
 (directive
  (path_directive
   (property)
   (path_value (string))))
 (directive
  (path_directive
   (property)
   (path_value (string)))))
